<resources>
    <string name="app_name">quz</string>
    <string name="q1">Q1.What are the indirect Direct subclasses of Activity?</string>
    <string name="q1c1">A )   launcherActivity</string>
    <string name="q1c2"> B )   preferenceActivity</string>
    <string name="q1c3"> C )   tabActivity</string>
    <string name="q1c4"> D )   all the above  </string>

    <string name="q2"> Q2. Which piece of code used in Android is not open source?</string>
    <string name="q2c1">  A )   Keypad driver</string>
    <string name="q2c2"> B )   WiFi? driver </string>
    <string name="q2c3"> C )   Audio driver </string>
    <string name="q2c4"> D )  Power management</string>

    <string name="q3"> Q3. You can shut down an activity by calling its _______ method</string>
    <string name="q3c1"> A )  onDestory() </string>
    <string name="q3c2"> B )  finishActivity() </string>
    <string name="q3c3"> C )  finish() </string>
    <string name="q3c4"> D )  none of the above</string>

    <string name="q4"> Q4.The XML file that contains all the text that your application uses?</string>
    <string name="q4c1"> A )  stack.xml </string>
    <string name="q4c2"> B )  text.xml </string>
    <string name="q4c3"> C )  strings.xml </string>
    <string name="q4c4"> D )  string.java </string>

    <string name="q5">Q5. What data types are supported by AIDL?</string>
    <string name="q5c1"> A ) string </string>
    <string name="q5c2"> B ) List</string>
    <string name="q5c3"> C ) none of the above</string>


    <string name="q6"> Q6.What is AAPT</string>
    <string name="button">Check your score</string>


</resources>
